[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["Quentin Fortier"]

[tool.poetry.dependencies]
python = "^3.8"
cvxpy = "^1.1.12"
matplotlib = "^3.4.1"
PyMPL = "^1.2.1"
sklearn = "^0.0"
nbconvert = "^6.0.7"
mip = "^1.13.0"
ipykernel = "^5.5.5"
opencv-python = "^4.5.2"
keras = "^2.4.3"
tensorflow = "^2.5.0"
jupyterlab = "^3.0.17"
jupyter = "^1.0.0"
pandas = "^1.3.0"
openpyxl = "^3.0.7"
plotly = "^5.1.0"
jupyterlite = "^0.1.0-alpha.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
