[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["Quentin Fortier"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.1"
mip = "^1.13.0"
jupyter = "^1.0.0"
pandas = "^1.3.0"
plotly = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
