[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["Quentin Fortier"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
networkx = "^2.8.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
